--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <header class="gradient-bg text-white py-6">
       <div class="container mx-auto px-4">
         <div class="flex flex-col items-center">
-          <a href="https://team236.github.io/" target="_blank">
-            <img src="brighter banner.jpg" alt="236 Technoticks Banner" class="header-banner disney-border hover:border-white">
+          <a href="https://Troop26.github.io/" target="_blank">
+            <img src="banner.png" alt="Scout banner" class="header-banner disney-border hover:border-white">
           </a>
           <p class="text-sm md:text-base bg-white text-green-700 px-3 py-1 rounded-full font-medium mt-3">
             Website under active development
