--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <a href="https://Troop26.github.io/about_us.html" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
           <i class="fas fa-users mr-2"></i>About Us
         </a>
-        <a href="https://Troop26.github.io/New_members.html" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
-          <i class="fas fa-user-plus mr-2"></i>New Members
+        <a href="https://www.troop28providence.com/" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
+          <i class="fas fa-user-plus mr-2"></i>Friends @ 28 , 20
         </a>
         <a href="https://Troop26.github.io/Contact_Us.html" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
           <i class="fas fa-envelope mr-2"></i>Contact Us
