--- a/about_us.html
+++ b/about_us.html
@@ -145,7 +145,7 @@
     <!-- Main Content -->
     <main class="container mx-auto px-4 my-10">
       <div class="robot-slideshow overflow-hidden">
-        <center></center>
+        <center>
         <h1 style="font-size: 26px;">About Troop 26</h1>
         <p style="font-size: 16px;"> Found in 1946, Troop 26 is committed to bettering its scouts and community, through community service, <br> leadership opportunities for scouts, and skill building to empower scouts to serve (eg, CPR training). If you or your child between 6th grade <br> and 18 years old is interested in joining us, Contact Us! and/or feel free to attend any of our Wed. night <br> weekly meetings @ Lyme Fire House taking place during the school year. <br> Best, Troop 26 SPL Woody </p>
         </center>
