--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
         <a href="https://Troop26.github.io/Links.html" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
           <i class="fas fa-link mr-2"></i>Links
         </a>
+        <a href="https://web.archive.org/web/20210613081509/https://www.troop26lymeoldlyme.org/#expand" class="nav-btn bg-green-800 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg">
+          <i class="fas fa-link mr-2"></i>Old site - retired 2021
+        </a>
       </div>
     </nav>
     
